--- a/client/src/pages/StoreProduct/styles.module.css
+++ b/client/src/pages/StoreProduct/styles.module.css
@@ -44,10 +44,10 @@
 }
 
 .back {
-    margin: 5rem 0 0;
+    margin: 5rem auto 0;
 
     @media (--mq-gt-s) {
-        margin: 0 0 -2rem;
+        margin: 0 auto -2rem;
     }
 }
 
